fix: overflow of ordered-list and unordered-list

--- a/components/unordered-list/css/_mixin.scss
+++ b/components/unordered-list/css/_mixin.scss
@@ -5,6 +5,8 @@
  */
 
 @mixin utrecht-unordered-list {
+  /* Configure `box-sizing` and `text-align` for `--center` */
+  box-sizing: border-box;
   font-family: var(--utrecht-document-font-family, inherit);
   font-size: var(--utrecht-unordered-list-font-size, var(--utrecht-document-font-size, inherit));
   line-height: var(--utrecht-unordered-list-line-height, var(--utrecht-document-line-height, inherit));
@@ -21,9 +23,10 @@
 }
 
 @mixin utrecht-unordered-list--center {
+  inline-size: max-content;
   margin-inline-end: auto;
   margin-inline-start: auto;
-  width: max-content;
+  max-inline-size: 100%;
 }
 
 @mixin utrecht-unordered-list--distanced {
